# active-vlm

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: boed-full.yaml  lookahead-mme-remote-sensing.yaml  mcmc-mme-remote-sensing.yaml
src/cv_agent/: __init__.py  constants.py  main_benchmark_multi.py
src/cv_agent/agents/: __init__.py  aggregator_nodes.py  bed_nodes.py  cv_agent_nodes.py
src/cv_agent/benchmark_loaders/: __init__.py  base.py  cv_bench_loader.py  hr_bench_loader.py  mme_loader.py  vstar_loader.py
src/cv_agent/callbacks/: __init__.py  langfuse.py
src/cv_agent/core/: builder.py  registries.py  state.py
src/cv_agent/models/: __init__.py  openai.py
src/cv_agent/policies/: boed.py  events.py  look_ahead.py  mcmc.py  utils.py
src/cv_agent/prompts/: __init__.py  aggregator.py  direct_reasoning.py  planner.py
src/cv_agent/prompts/templates/: aggregator_system.j2  boed_resolvability.md  direct_reasoning_system.j2  look_ahead_crop_inst.md  look_ahead_resolvability.md  planner_react.j2
src/cv_agent/tools/: __init__.py  base.py  cv_toolkit.py
src/cv_agent/utils/: __init__.py  concurrency.py  config.py  grader.py  logging.py  qwen_vl.py  storage.py
tests/: test_core_units.py  test_public_configs.py  test_storage.py
tools/local-stack/: .gitignore  README.md  _minio.py  docker-compose.yml  pyproject.toml  server.py  smoke_test.py  upload_sample.py
